Publish release notes for 1.8.0 release

--- a/_posts/2023-03-30-hangfire-1.8.0-rc3.md
+++ b/_posts/2023-03-30-hangfire-1.8.0-rc3.md
@@ -6,4 +6,4 @@ category: release
 
 3<sup>rd</sup> release candidate of the upcoming Hangfire is here. Version 1.8 offers a set of great new features like first-class queue support for background jobs, the enhanced role of the Deleted state that now supports exceptions, more options for continuations to implement even try/catch/finally semantics, better defaults to simplify the initial configuration and various Dashboard UI improvements like full-width and optional dark mode support.
 
-Please see the more recent [Hangfire 1.8.0-rc4]({% post_url 2023-04-25-hangfire-1.8.0-rc4 %}) release for details.
+Please see the more recent [Hangfire 1.8.0]({% post_url 2023-04-28-hangfire-1.8.0 %}) release for details.
