--- a/_posts/2023-04-25-hangfire-1.8.0-rc4.md
+++ b/_posts/2023-04-25-hangfire-1.8.0-rc4.md
@@ -1,307 +1,10 @@
 ---
 title: Hangfire 1.8.0-rc4
 author: odinserj
-category: [release, news]
+category: release
 summary: First-class queue support for jobs, enhanced "Deleted" state, and a lot of Dashboard UI improvements like full-width and optional dark mode support.
 ---
 
 4<sup>th</sup> release candidate of the upcoming Hangfire is here. Version 1.8 offers a set of great new features like first-class queue support for background jobs, the enhanced role of the Deleted state that now supports exceptions, more options for continuations to implement even try/catch/finally semantics, better defaults to simplify the initial configuration and various Dashboard UI improvements like full-width and optional dark mode support.
 
-### Contents
-{:.no_toc}
-
-* This will become a table of contents (this text will be scrapped).
-{:toc}
-
-### Breaking Changes
-
-<table>
-    <thead>
-        <tr>
-            <th>Package</th>
-            <th>Changes</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Hangfire.Core</td>
-            <td>
-                <ul>
-                    <li>Dropped support of <code>net45</code> platform in favor of the <code>net451</code> one.</li>
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td>Hangfire.SqlServer</td>
-            <td>
-                <ul>
-                    <li>Don't reference <a href="https://www.nuget.org/packages/System.Data.SqlClient" target="_blank" rel="nofollow noopener">System.Data.SqlClient</a> package explicitly.</li>
-                    <li>Prioritise <a href="https://www.nuget.org/packages/Microsoft.Data.SqlClient" target="_blank" rel="nofollow noopener">Microsoft.Data.SqlClient</a> package over <a href="https://www.nuget.org/packages/System.Data.SqlClient" target="_blank" rel="nofollow noopener">System.Data.SqlClient</a> one.</li>
-                    <li>Dropped support of <code>net45</code> platform in favor of the <code>net451</code> one.</li>
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td>Hangfire.AspNetCore</td>
-            <td>
-                <ul>
-                    <li>Package is now based on <code>Hangfire.NetCore</code> to avoid duplicating types.</li>
-                </ul>
-            </td>
-        </tr>
-    </tbody>
-</table>
-
-### First-class Queue Support
-
-From the first versions of Hangfire, the "Queue" property was related only to a specific instance of the "Enqueued" state but not to a background job itself. This factor often leads to confusion in different scenarios with dynamic queueing, despite there being solutions like static or dynamic `QueueAttribute` or other extension filters that offer help in persisting a target queue.
-
-Now it is possible to explicitly assign a queue manually for a background job when creating it using the new method overloads in both `BackgroundJob` class and `IBackgroundJobClient` interface. In this case, the given queue will be used every time the background job is enqueued unless overridden by state filters like the `QueueAttribute`.
-
-<pre><code><span class="keywd">var</span> id = <span class="type">BackgroundJob</span>.Enqueue&lt;<span class="type">IOrdersServices</span>&gt;(<span class="string">"critical"</span>, x => x.ProcessOrder(orderId));
-<span class="type">BackgroundJob</span>.ContinueJobWith&lt;<span class="type">IEmailServices</span>&gt;(id, <span class="string">"email"</span>,  x => x.SendNotification(orderId));</code></pre>
-
-These changes can be beneficial for a microservice-based approach or when manual load-balancing is required.
-
-Perhaps it's also worth noting that new changes allow delayed background jobs with an explicit queue specified to be placed to a job queue and processed by a worker without a "Scheduled &rarr; Enqueued" state transition, making such jobs be processed with much better throughput.
-
-<div class="alert alert-warning">
-    <h4>Storage Support Required</h4>
-    <p>
-    The new feature requires job storage to persist a new field, which storage may not support out-of-the-box. That's why additional storage support is required. Otherwise, the <code>NotSupportedException</code> will be thrown. So upgrade of the job storage package is likely needed. Currently the following storages support this feature:
-    </p>
-    <ul>
-        <li>Hangfire.SqlServer 1.8.0-rc4</li>
-        <li>Hangfire.Pro.Redis 3.0.0-rc1</li>
-        <li>Hangfire.InMemory 0.4.0-rc1</li>
-    </ul>
-</div>
-
-Specifying an explicit queue name for recurring-based background jobs is also possible, as shown in the snippet below. However, please note that recurring jobs will not be filtered based on such queue, and queue name will be used only when creating a background job on its schedule. So unfortunately, it's still impossible to use the same storage for recurring jobs from different code bases, but the new release also contains changes that will make this possible.
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(<span class="string">"my-id"</span>, <span class="string">"critical"</span>, () => Console.WriteLine(<span class="string">"Hello, world"</span>), <span class="string">"* * * * *"</span>);</code></pre>
-
-### Dashboard UI Improvements
-
-#### Full-width Support
-
-Dashboard UI page is now fully responsive and will fit the full-screen size to display more information. Lengthy background or recurring job names, a large list of arguments, or tables with many columns don't lead to problems now. The new layout is enabled by default.
-
-<img alt="Full Width for Dashboard UI" src="/img/full-width-dashboard.png">
-
-#### Dark Mode Support
-
-Dark mode support comes for the Dashboard UI with this release. It is enabled by default and is triggered automatically based on system settings, allowing automatic transitions.
-
-<img alt="Dark Mode for Dashboard UI" src="/img/dark-mode.png">
-
-#### Custom CSS and JavaScript Resources
-
-Adding custom CSS and JavaScript files to avoid possible Content Security Policy-related issues in extensions for the Dashboard UI is now possible. These files can be added as embedded resources to an extension assembly, and <code>GetManifestResourceNames</code> method can be used to determine the path names.
-
-<pre><code><span class="keywd">var</span> assembly = <span class="keywd">typeof</span>(<span class="type">MyCustomType</span>).GetTypeInfo().Assembly;
-<span class="comm">// Call the `assembly.GetManifestResourceNames` method to learn more about paths.</span>
-
-configuration
-    .UseDashboardStylesheet(assembly, <span class="string">"MyNamespace.Content.css.styles.css"</span>)
-    .UseDashboardJavaScript(assembly, <span class="string">"MyNamespace.Content.js.scripts.js"</span>)</code></pre>
-
-#### Custom Renderers on the Job Details Page
-
-The "Job Details" page became extensible. Custom sections can now be added by calling the `UseJobDetailsRenderer` method that takes an integer-based ordering parameter and a callback function with `JobDetailsRendererDto` parameter that contains all the necessary details about the page itself and a job being displayed.
-
-<pre><code>configuration
-    .UseJobDetailsRenderer(10, dto => <span class="keywd">new</span> <span class="type">NonEscapedString</span>(<span class="string">"&lt;h4&gt;Hello, world!&lt;/h4&gt;&lt;p&gt;I'm a custom renderer.&lt;/p&gt;"</span>))</code></pre>
-
-After calling a method above, a new section appears on the "Job Details" page under the "Parameters" and above the "States" sections. Please find an example below.
-
-<img alt="Custom Dashboard Renderer" src="/img/custom-renderer.png">
-
-### Enhanced "Deleted" State
-
-Now we can pass exception information to the "Deleted" state, making it implement the "fault" semantics as a *final state*. Background jobs in the "Deleted" state will automatically expire, unlike jobs in the "Failed" state, which is not considered a *final* one.
-
-The `AutomaticRetry` filter automatically passes an exception to a deleted state when all retry attempts are exhausted. It is also possible to pass exceptions manually when creating an instance of the `DeletedState` class. The stack trace isn't persisted to avoid data duplication since it's already preserved in a "Faulted" state. Only type information, message, and inner exceptions (if any) persisted.
-
-<img alt="Deleted state renderer" src="/img/deleted-state.png">
-
-Continuation options enumeration was also extended. It is now possible to create continuations explicitly for the "Deleted" state with the `JobContinuationOptions.OnlyOnDeletedState` option or even use it for multiple values in the future since `JobContinuationOptions` now implement the semantics of the flags.
-
-#### Try/Catch/Finally Implementation
-
-We now have everything to build try/catch/finally background jobs and even pass results or exceptions to antecedent background jobs as their arguments. We should use the `UseResultsInContinuations` method to enable this feature and apply `FromResult` or `FromException` attributes to corresponding parameters.
-
-<pre><code>configuration
-    .UseResultsInContinuations()</code></pre>
-
-As an example, we can create the following methods, where `ExceptionInfo` class (from the `Hangfire` namespace) implements the minimal exception information and `bool` type as a result of the `Try` job and corresponding parameter of the successful continuation.
-
-<pre><code><span class="keywd">public</span> <span class="keywd">static</span> <span class="keywd">bool</span> Try() { <span class="comm">/* ... */</span> }
-<span class="keywd">public</span> <span class="keywd">static</span> <span class="keywd">void</span> Catch([<span class="type">FromException</span>] <span class="type">ExceptionInfo</span> exception) { <span class="comm">/* ... */</span> }
-<span class="keywd">public</span> <span class="keywd">static</span> <span class="keywd">void</span> Finally() { <span class="comm">/* ... */</span> }
-
-<span class="keywd">public</span> <span class="keywd">static</span> <span class="keywd">void</span> Continuation([<span class="type">FromResult</span>] <span class="keywd">bool</span> result) { <span class="comm">/* ... */</span> }</code></pre>
-
-After introducing all the methods, let's create background jobs for them. Please note that we create jobs non-atomically since they are not part of a batch. We pass `default` keywords as arguments for continuations, and actual values will be used at run-time.
-
-<pre><code><span class="keywd">var</span> id = <span class="type">BackgroundJob</span>.Enqueue(() => Try());
-
-<span class="comm">// "Catch" background job</span>
-<span class="type">BackgroundJob</span>.ContinueJobWith(id, () => Catch(<span class="keywd">default</span>),
-    <span class="type">JobContinuationOptions</span>.OnlyOnDeletedState);
-
-<span class="comm">// "Finally" background job</span>
-<span class="type">BackgroundJob</span>.ContinueJobWith(id, () => Finally(),
-    <span class="type">JobContinuationOptions</span>.OnAnyFinishedState);
-
-<span class="comm">// Continuation on success</span>
-<span class="type">BackgroundJob</span>.ContinueJobWith(id, () => Continuation(<span class="keywd">default</span>),
-    <span class="type">JobContinuationOptions</span>.OnlyOnSucceededState);</code></pre>
-
-<a href="/pro/#atomic-background-job-creation">Batches feature</a> from Hangfire Pro allows the creation of the whole block atomically, so either all background jobs or none of them will be created on failure.
-
-<pre><code><span class="type">BatchJob</span>.StartNew(batch =>
-{
-    <span class="keywd">var</span> id = batch.Enqueue(() => Try());
-
-    batch.ContinueJobWith(id, () => Catch(<span class="keywd">default</span>), <span class="type">JobContinuationOptions</span>.OnlyOnDeletedState);
-    batch.ContinueJobWith(id, () => Finally(), <span class="type">JobContinuationOptions</span>.OnAnyFinishedState);
-    batch.ContinueJobWith(id, () => Continuation(<span class="keywd">default</span>), <span class="type">JobContinuationOptions</span>.OnlyOnSucceededState);
-});</code></pre>
-
-### Storage API Improvements
-
-**Single time authority for schedulers**. Storage now can act as a time authority for `DelayedJobScheduler` and `RecurringJobScheduler` background processes. When storage implementation supports this feature, these components will use the current UTC time of the instance instead of the current server's UTC time. This feature makes scheduled processing less sensitive to time synchronization issues.
-
-**Fewer network roundtrips**. A lot of network calls during processing are related to background job parameters. Since they are small enough and most aren't updated often, we can cache them in the new `ParametersSnapshot` property of the `JobDetailsDto` and `BackgroundJob` classes. The `GetJobParameter` method now supports the `allowStale` argument that we can use to retrieve a cached version instead, eliminating additional network calls.
-
-**More transactional methods**. Transaction-level distributed locks were added in this version, allowing more features to be implemented in extension filters without sacrificing atomicity. Also, it is now possible to create a background job inside a transaction for storage that generates identifiers on the client side, so it will be possible to reduce the number of roundtrips to storage.
-
-**Feature-based flags** to smooth the transition, so every new feature is optional to avoid breaking changes for storage implementations.
-
-### SQL Server Storage
-
-#### Breaking Changes
-
-Since `Microsoft.Data.SqlClient` package is the "flagship data access driver for SQL Server going forward", it will be used by the `Hangfire.SqlServer` package by default when referenced in the target project. Automatic detection is performed in run-time.
-
-<div class="alert alert-warning">
-    <h4>Encryption is enabled by default</h4>
-    <p>
-    <code>Microsoft.Data.SqlClient</code> package has <a href="https://github.com/dotnet/SqlClient/blob/main/release-notes/4.0/4.0.0.md#breaking-changes" target="_blank" rel="nofollow">breaking changes</a> and encryption is enabled by default. You might need to add <code>TrustServerCertificate=true</code> option to a connection string or stay with <code>System.Data.SqlClient</code> package. More details can be found in this <a href="https://github.com/dotnet/SqlClient/issues/1402" target="_blank" rel="nofollow">issue on GitHub</a>.
-    </p>
-</div>
-
-In this version, neither `Microsoft.Data.SqlClient` nor `System.Data.SqlClient` package is referenced as a dependency by the `Hangfire.SqlServer` package anymore, so the particular package needs to be referenced manually if you prefer to stay with it or postpone the transition to a newer package. You can use the following snippet with the `*` as a version to always use the latest one.
-
-```xml
-<ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="*" />
-    <!-- OR -->
-    <PackageReference Include="System.Data.SqlClient" Version="*" />
-</ItemGroup>
-```
-
-#### Better Defaults
-
-We've introduced many changes in the previous versions of the "Hangfire.SqlServer" storage to make it faster and more robust. However, they weren't enabled by default to ensure first they were working reliably. Now, after they prove themselves useful and stable enough, we can enable them by default to avoid complex configuration options.
-
-* Default isolation level is finally set to `READ COMMITTED`.
-* Command batching for transactions is now enabled by default.
-* Transactionless fetching based on sliding invisibility timeout is used by default.
-* Queue poll interval is set to the `TimeSpan.Zero` value that defaults to `200` ms.
-* Schema-related options such as `DisableGlobalLocks` will be detected automatically using the new `TryAutoDetectSchemaDependentOptions` option enabled by default.
-
-#### `Schema 8` and `Schema 9` Migrations
-
-This schema is an optional but recommended migration that contains the following changes. **Please note** that it requires the `SqlServerStorageOptions.EnableHeavyMigrations` option to be enabled to apply the migration automatically since it can take some time when `Counter` or `JobQueue` tables contain many records.
-
-##### Schema 8
-
-* `Counter` table now has a clustered primary key to allow replication on Azure;
-* `JobQueue.Id` column length was changed to the `bigint` type to avoid overflows;
-* `Server.Id` column's length was changed to `200` to allow lengthy server names;
-* `Hash` and `Set` tables now include the `IGNORE_DUP_KEY` option to make upsert queries faster.
-
-##### Schema 9
-
-* `State` table nows has a non-clustered index on its `CreatedAt` column.
-
-As always, you can apply the migration manually by downloading it from GitHub using [this link](https://github.com/HangfireIO/Hangfire/blob/master/src/Hangfire.SqlServer/DefaultInstall.sql).
-
-### Culture & Compatibility Level
-
-Hangfire automatically captures `CultureInfo.CurrentCulture` and `CultureInfo.CurrentUICulture` and preserves their two-letter codes as background job parameters using the `CaptureCaptureAttribute` filter to use the same culture information in a background job as in the original caller context. The downside of such defaults can be heavily duplicated data for each background job.
-
-Of course, we can remove that filter to avoid capturing anything and save some storage space for applications with a single culture only. But now we can optimize the case when `CurrentCulture` equals `CurrentUICulture` with the new compatibility level and set the default culture to avoid saving culture-related parameters at all if an application uses primarily the same culture.
-
-#### Compatibility Level
-
-**After all our servers** upgraded to version 1.8, we can set the following compatibility level to stop writing the `CurrentUICulture` job parameter when it's the same as the `CurrentCulture` one. Please note that version 1.7 and lower don't know what to do in this case and will throw an exception, so we should upgrade first.
-
-<pre><code>configuration
-    .SetDataCompatibilityLevel(<span class="type">CompatibilityLevel</span>.Version_180)</code></pre>
-
-#### Default Culture
-
-We can also go further and stop writing culture-related parameters when our application deals mainly with a single culture.
-
-<div class="alert alert-info">
-    <h4>Two-step deployment required</h4>
-    <p>When there are multiple servers, we should deploy the changes in two steps. Otherwise, old servers will not be instructed on what to do when job parameters are missing.</p>
-    <ol>
-        <li>Deploy with <code>UseDefaultCulture(/* Culture */)</code>;</li>
-        <li>Deploy with <code>UseDefaultCulture(/* Culture */, captureDefault: false)</code>.</li>
-    </ol>
-</div>
-
-We can set the default culture by calling the `UseDefaultCulture`. With a single argument, it will use the same culture for both `CurrentCulture` and `CurrentUICulture`, but there's an overload to set both explicitly.
-
-<pre><code>configuration
-    .UseDefaultCulture(<span class="type">CultureInfo</span>.GetCultureInfo(<span class="string">"en-US"</span>))</code></pre>
-
-After calling the line above, the `CaptureCultureAttribute` filter will use the configured default culture when `CurrentCulture` or `CurrentUICulture` background job parameters are missing for a particular background job.
-
-After we instructed what to do when the referenced parameters are missing and **deployed the changes**, we can pass the `false` argument for the `captureDefault` parameter to avoid preserving the default culture.
-
-<pre><code>configuration
-    .UseDefaultCulture(<span class="type">CultureInfo</span>.GetCultureInfo(<span class="string">"en-US"</span>), captureDefault: <span class="keywd">false</span>)</code></pre>
-
-### Deprecations in Recurring Jobs
-
-Deprecations are mainly related to recurring background jobs and are made to avoid confusion when explicit queue names are used.
-
-#### Implicit Identifiers Deprecated
-
-Methods with implicit recurring job identifiers are now obsolete. While these methods make it easier to create a recurring job, sometimes they cause confusion when we use the same method to create multiple recurring jobs, but only a single one is created. With queues support for background jobs, there can be even more difficulties. So the following calls:
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(() => <span class="type">Console</span>.WriteLine(<span class="string">"Hi"</span>), <span class="type">Cron</span>.Daily);</code></pre>
-
-Should be replaced with the following ones, where the first parameter determines the recurring job identifier:
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(<span class="string">"Console.WriteLine"</span>, () => <span class="type">Console</span>.WriteLine(<span class="string">"Hi"</span>), <span class="type">Cron</span>.Daily);</code></pre>
-
-For non-generic methods, the identifier is `{TypeName}.{MethodName}`. For generic methods, it's much better to open the Recurring Jobs page in the Dashboard UI and check the identifier of the corresponding recurring job to avoid any mistakes.
-
-#### Optional Parameters Deprecated
-
-It is impossible to add new parameters to optional methods without introducing breaking changes. So to make the new explicit queues support consistent with other new methods in `BackgroundJob` / `IBackgroundJobClient` types, methods with optional parameters became deprecated. So the following lines:
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(<span class="string">"my-id"</span>, () => <span class="type">Console</span>.WriteLine(<span class="string">"Hi"</span>), <span class="type">Cron</span>.Daily, timeZone: <span class="type">TimeZoneInfo</span>.Local);</code></pre>
-
-Should be replaced with an explicit `RecurringJobOptions` argument.
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(<span class="string">"my-id"</span>, () => <span class="type">Console</span>.WriteLine(<span class="string">"Hi"</span>), <span class="type">Cron</span>.Daily, <span class="keywd">new</span> <span class="type">RecurringJobOptions</span>
-{
-    TimeZone = <span class="type">TimeZoneInfo</span>.Local
-});</code></pre>
-
-#### The `RecurringJobOptions.QueueName` property is deprecated
-
-New methods with an explicit queue name are suggested to use instead when support is added for your storage. This will also make re-queueing logic work as expected, with queueing to the same queue. So the following calls:
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(<span class="string">"my-id"</span>, () => <span class="type">Console</span>.WriteLine(<span class="string">"Hi"</span>), <span class="type">Cron</span>.Daily, queue: <span class="string">"critical"</span>);</code></pre>
-
-Should be replaced by these ones:
-
-<pre><code><span class="type">RecurringJob</span>.AddOrUpdate(<span class="string">"my-id"</span>, <span class="string">"critical"</span>, () => <span class="type">Console</span>.WriteLine(<span class="string">"Hi"</span>), <span class="type">Cron</span>.Daily);</code></pre>
+Please see the more recent [Hangfire 1.8.0]({% post_url 2023-04-28-hangfire-1.8.0 %}) release for details.
